--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
   "permissions": [
     "activeTab",
     "https://ajax.googleapis.com/",
-    "desktopCapture"
+    "desktopCapture",
+    "tabs"
   ]
 }
