--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,17 @@
 {
   "manifest_version": 2,
 
-  "name": "Getting started example",
+  "name": "pincap/flickr cap",
   "description": "This extension shows a Google Image search result for the current page",
   "version": "1.0",
 
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html",
-    "default_title": "Click here!"
+    "default_title": "for flickr"
   },
 
   "background": {
-    // "scripts": ["background.js"],
     "page": "background.html"
   },
 
